# sb

./: README.md
assembler/: .gitignore
assembler/src/: assembler.c  assembler.h  bucket.c  idt.h  main.c  map.c  map.h  pseudo_instr.c  real_md.h
assembler/tst/: tdiv.i  tfib.i  tmdn.i  tothers.i
assembler/tst/unit-tests/: map.c  pseudo_instr.c
emulator/: .gitignore  Makefile
emulator/doc/: doc.tex
emulator/src/: instr.c  instr.h  main.c
emulator/test-io/: t_div.i  t_exp.i  t_mdn.i
emulator/test-io/assembly/: t_exp.assembly  t_fib.assembly
expander/: .gitignore  CMakeLists.txt  Makefile
expander/doc/: doc.tex
expander/src/: CMakeLists.txt  expander.c  line_parser.c  line_parser.h  macro_table.c  macro_table.h  main.c  map.c  str_aux.c  vector.c
expander/tst/: tfat.i  tmdc.i  tspec2.i
expander/tst/unit-tests/: CMakeLists.txt  macro_table.c
linker/: CMakeLists.txt  Makefile
linker/doc/: doc.tex
linker/src/: CMakeLists.txt  linker.c  linker.h  main.c  map.h  str_aux.c  str_aux.h  sym_table.c  sym_table.h  vector.h
linker/tst/: calculo.mmv  main.mmv
linker/tst/tcalc/: tcalc.amv  tcalc_add.amv  tcalc_div.asm  tcalc_exp.amv  tcalc_mul.amv  tcalc_mul.asm  tcalc_sub.asm
linker/tst/tprim/: tprim.amv  tprim_div.amv  tprim_prim.amv
linker/tst/ttriv/: main.amv  modulo.amv
linker/tst/unit-tests/: CMakeLists.txt  bucket.c
sb-assembler/: .gitignore  Makefile
sb-assembler/doc/: doc.tex
sb-assembler/src/: assembler.c  assembler.h  bucket.c  bucket.h  hash_aux.c  hash_aux.h  idt.c  idt.h  ll.c  ll.h  main.c  map.c  map.h  pseudo_instr.c  pseudo_instr.h  real_md.c  real_md.h
sb-assembler/test/: bucket.c  idt.c  real_md.c  t1.i
sb-assembler/test-io/: t1.i  tdiv.i  tmdn.i  tothers.i
sb-assembler/tst/: texp.i  tmdn.i
sb-emulator/: .gitignore  Makefile
sb-emulator/doc/: doc.tex
sb-emulator/src/: emulator.c  emulator.h  instr.c
sb-emulator/test-io/: t_fib.i
sb-emulator/test-io/assembly/: t_div.assembly  t_mdn.assembly  t_spec.assembly
sb-expander/: .gitignore  CMakeLists.txt
sb-expander/src/: CMakeLists.txt  expander.c  expander.h  line_parser.c  line_parser.h  macro_table.c  macro_table.h  mock.c  str_aux.h  vector.c  vector.h
sb-expander/tst/: tspec1.i
sb-expander/tst/unit-tests/: CMakeLists.txt  bucket.c  macro_table.c  map.c  vector.c
src/: emulator.c  emulator.h  instr.c  instr.h  main.c
